--- a/samples/bluetooth/broadcast_audio_sink/prj.conf
+++ b/samples/bluetooth/broadcast_audio_sink/prj.conf
@@ -1,12 +1,15 @@
 CONFIG_BT=y
-CONFIG_BT_DEBUG_LOG=y
+CONFIG_BT_DEVICE_NAME="Broadcast Audio Sink"
 CONFIG_BT_AUDIO=y
 CONFIG_BT_SMP=y
 CONFIG_BT_PAC_SNK=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_AUDIO_BROADCAST_SINK=y
-CONFIG_BT_ISO_MAX_CHAN=2
-CONFIG_BT_AUDIO_BROADCAST_SNK_SUBGROUP_COUNT=2
-CONFIG_BT_AUDIO_BROADCAST_SNK_STREAM_COUNT=2
 
-CONFIG_BT_DEVICE_NAME="Broadcast Audio Sink"
+CONFIG_FPU=y
+CONFIG_LIBLC3=y
+CONFIG_NEWLIB_LIBC=y
+
+CONFIG_DISK_ACCESS=y
+CONFIG_FILE_SYSTEM=y
+CONFIG_FAT_FILESYSTEM_ELM=y
