--- a/samples/bluetooth/broadcast_audio_source/prj.conf
+++ b/samples/bluetooth/broadcast_audio_source/prj.conf
@@ -1,13 +1,16 @@
 CONFIG_MAIN_STACK_SIZE=2048
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
 
 CONFIG_BT=y
-CONFIG_BT_DEBUG_LOG=y
+CONFIG_BT_DEVICE_NAME="Broadcast Audio Source"
 CONFIG_BT_AUDIO=y
 CONFIG_BT_AUDIO_BROADCAST_SOURCE=y
-
-CONFIG_BT_ISO_MAX_CHAN=2
-CONFIG_BT_AUDIO_BROADCAST_SRC_STREAM_COUNT=2
-CONFIG_BT_AUDIO_BROADCAST_SRC_SUBGROUP_COUNT=2
 CONFIG_BT_ISO_TX_BUF_COUNT=4
 
-CONFIG_BT_DEVICE_NAME="Broadcast Audio Source"
+CONFIG_FPU=y
+CONFIG_LIBLC3=y
+CONFIG_NEWLIB_LIBC=y
+
+CONFIG_DISK_ACCESS=y
+CONFIG_FILE_SYSTEM=y
+CONFIG_FAT_FILESYSTEM_ELM=y
